--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FFFFFF;
+    background-color: #ffff;
     color: #434455;
     font-family: 'Roboto', sans-serif;
     font-style: none;
