--- a/src/components/SearchBox.module.css
+++ b/src/components/SearchBox.module.css
@@ -1,3 +1,14 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+
+
+
 .input {
     border-radius: 8px;
     padding-left: 20px;
@@ -13,3 +24,4 @@
     border-color: orangered;
     transition: 300ms linear, color 300ms linear;
 }
+
